# Computer-Science-Mackenzie

./: README.md
1st Semester/: README.md
1st Semester/Algoritmos I/: aula19-05.py
1st Semester/Algoritmos I/aula 01/: dobro e triplo.py  print data de nascimento.py
1st Semester/Algoritmos I/aula03/: Aula 3.py  Celsius para Farenheits.py  exercicos extras.py
1st Semester/Algoritmos I/aula04/: Exercícios  Extras (5).py  Exercícios extras (3).py  aula condições.py  funcoesCeil.py
1st Semester/Algoritmos I/for/: exercicio 8 FOR algoritmo.py  mais exercicios FOR.py  treinando FOR.py
1st Semester/Algoritmos I/função/: 6 EXERCICIOS FUNÇÃO.py  aula 12-05 função.py
1st Semester/Algoritmos I/revisao/: exercicio extra triangulo retangulo.py
1st Semester/Algoritmos I/while/: Algoritmo -  exercício 5.py
1st Semester/Fundamentos De Ciência Da Computação/: ex1 fuindamentos.py
1º Semester/Algoritmos I/: QUIZ-SAÚDE MENTAL (1).py  aula19-05.py
1º Semester/Algoritmos I/aula 01/: area quadrado.py  fatorial.py  nome:idade:sexo.py  soma.py
1º Semester/Algoritmos I/aula02/: Exercicios Lab 02.py
1º Semester/Algoritmos I/aula04/: Exercícios Extras (6).py  Exs Extras (2) Lab 01.py  Exs Extras (5) Lab 01.py  aula 4 teste math.py
1º Semester/Algoritmos I/aula05/: Lab 05 Extra (06).py  Lab 05 Extra(11).py
1º Semester/Algoritmos I/lista/: media notas ex.py
1º Semester/Algoritmos I/revisao/: exercicio extra numeros pares impares primos.py  exercicios revisao.py
2nd Semester/Algoritmos e Programação II/Semana 2/: ex 1 - semana 3  ex1 - operações de um número.c  ex2 - IMC.c  ex3 - Conversão de temperatura.c  ex4 - hipotenusa.c  ex8.c
2nd Semester/Algoritmos e Programação II/Semana 3/: ex 1 - Sorteio.c  ex 2 - Sorteio com dica.c  ex 3 - Sorteio com limite de tentativas.c  ex 4 - Divisores de um número.c  ex 5 - Número perfeito.c
2nd Semester/Análise de Dados/: ex analise de dados.py
2nd Semester/Análise de Dados/Avaliação Contínua 01 /: Ex 1 .py  Ex2.ipynb
2nd Semester/Análise de Dados/Avaliação Contínua 03/: AvaliacÌ§aÌo_contiÌnua_03_Ex_1.ipynb  Avaliação_contínua_03_Ex_2.ipynb  avaliação_contínua_03_ex_1.py
2nd Semester/Análise de Dados/Avaliação Contínua 04/: Avaliação_contínua_04.ipynb
2nd Semester/Análise de Dados/Avaliação Contínua 05/: Avalição Conínua 05 - Análise de Dados.py
2nd Semester/Álgebra Booleana & Circuitos Digitais/: LogicaProjeto.cdl  ULA FINALIZADA 2.cdl  ex 1 - lab 3.cdl  lab-ex12.cdl
3rd Semestre/Data Structures I/Project I/: Fila.java  README.md
3rd Semestre/Estrutura De Dados I/.metadata/: version.ini
3rd Semestre/Estrutura De Dados I/2˚Bimestre/: CircleLinkedList.java  DLL.java  LinkedList.java
3rd Semestre/Estrutura De Dados I/Projeto 1/: Main.java  README.md  Variaveis.java
4th Semester/Algoritmos Numéricos/: AjusteDeRetas.py
4th Semester/Operational Systems/: README.md  main.c
4th Semester/Projeto/: README.md
5th Semester/: Grade.heic
5th Semester/Formal Languages ​​and Automata/: Projeto.c  README.md
6th Semester/Computação Distribuída/2º Bimestre/Atividades/Atividade 6/: CMakeLists.txt  cliente.cpp  cliente.py  notas.proto  notas_pb2.py  notas_pb2.pyi  notas_pb2_grpc.py  servidor.cpp  servidor.py
6th Semester/Computação Distribuída/2º Bimestre/Atividades/Atividade 7/server_cpp/: CMakeLists.txt  file_processor.grpc.pb.cc  file_processor.grpc.pb.h  file_processor.pb.cc  file_processor.pb.h  server.cc
6th Semester/Lab Engenharia de Software/: Lab Eng Soft.pages
6th Semester/Projetos Empreendedores/: Bussiness Model Canvas.docx  Empreendedores.numbers  Projeto.pages
(+187 files in other folders)
